--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
-body {
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
   margin: 0px;
+}
+
+body {
   color: white;
 }
 
@@ -83,6 +89,11 @@ header {
 .card {
   margin: 15px;
   border-radius: 10px;
+  flex-basis: 250px;
+}
+
+.card:hover {
+  /* flex-basis: 300px; */
 }
 
 #page-btn-container {
@@ -92,7 +103,7 @@ header {
 }
 
 .page-btn {
-  margin: 20px 0px 30px 0px;
+  margin: 20px 20px 30px 20px;
 }
 
 .page-btn.left {
@@ -116,7 +127,7 @@ header {
   max-height: 0px;
 }
 
-/* Understand this later */
+/* Star Background */
 /* https://codepen.io/WebSonick/pen/vjmgu */
 /* ============================================================================================== 
 SED Innovations
