--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@ html, body {
   height: 100%;
   overflow-x: hidden;
   margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
 }
 
 body {
   color: white;
+}
+
+h1 {
+  font-weight: 300;
 }
 
 #main-container {
@@ -159,6 +163,10 @@ header {
   border-color: white;
 }
 
+.page-btn:active {
+transform: translateY(1px);
+}
+
 .page-btn.left {
   text-align: right;
 }
@@ -186,7 +194,8 @@ header {
 }
 
 #detail-view-btn:hover {
-  transform: scale(1.1)
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 #detail-container {
@@ -236,7 +245,7 @@ header {
 
 .crement-btn {
   position: relative;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   margin: 0px 5px;
   border-radius: 4px;
   vertical-align: text-top;
@@ -245,16 +254,29 @@ header {
   font-size: 16px;
 }
 
-.crement-btn:hover {
-  transform: scale(1.1)
+.crement-btn:active {
+  transform: translateY(2px);
+  filter: saturate(60%)
 }
 
 .crement-remove {
   background-color: #df2e2e;
 }
 
+.crement-remove:hover {
+  color: #df2e2e;
+  border-color: #df2e2e;
+  background-color: white;
+}
+
 .crement-add {
   background-color: #3591c6;
+}
+
+.crement-add:hover {
+  color: #3591c6;
+  border-color: #3591c6;
+  background-color: white;
 }
 
 #test-hand-btn {
@@ -300,7 +322,7 @@ header {
 }
 
 .btn {
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   border-radius: 8px;
   padding: 5px 20px;
   font-size: 18px;
@@ -310,12 +332,14 @@ header {
 }
 
 .btn:hover {
-  transform: scale(1.1);
+  background-color: white;
+  border-color: #3591c6;
+  color: #3591c6;
 }
 
-.expands {
-  max-height: 300px;
-  overflow: hidden;
+.btn:active {
+  transform: translateY(2px);
+  filter: saturate(60%);
 }
 
 .hidden {
