--- a/style.css
+++ b/style.css
@@ -20,11 +20,13 @@ h1 {
   height: 100vh;
 }
 
+/***** Card Panel *****/
 
 #card-panel {
   display: flex;
   flex-flow: column;
   flex-basis: 65vw;
+  order: 0;
 }
 
 header {
@@ -171,6 +173,7 @@ transform: translateY(1px);
   text-align: right;
 }
 
+/***** Detail Panel *****/
 
 #detail-panel {
   position: relative;
@@ -330,6 +333,8 @@ transform: translateY(1px);
   margin: 5px;
 }
 
+/***** general *****/
+
 .btn {
   border: 2px solid transparent;
   border-radius: 8px;
@@ -436,4 +441,46 @@ https://mkrtchyan.ga
   -o-animation: move-clouds-back 200s linear infinite;
   -webkit-animation: move-clouds-back 200s linear infinite;
   animation: move-clouds-back 200s linear infinite;
+}
+
+/***** Responsive Styling *****/
+
+@media screen and (max-width: 600px) {
+
+  h1 {
+    font-size: 28px;
+  }
+
+  header {
+    padding: 0px 25px;
+  }
+
+  #main-container {
+    flex-flow: column;
+    height: auto;
+  }
+
+  #card-panel {
+    flex-basis: 40vh;
+  }
+
+  #search-form {
+    max-width: 80vw;
+  }
+
+  #card-container {
+    flex-flow: row;
+  }
+
+  #detail-panel {
+    order: 1;
+    flex-basis: unset;
+    border-right: none;
+    border-top: 2px solid rgba(255, 255, 255, 0.1);
+  }
+
+  .info-container p {
+    font-size: 12px;
+    margin: 3px 0px;
+  }
 }
