test hand button now disappears when deck has 0 cards

--- a/style.css
+++ b/style.css
@@ -471,6 +471,7 @@ https://mkrtchyan.ga
   #card-panel {
     flex-basis: 40vh;
     max-height: 40vh;
+    min-height: 40vh;
   }
 
   #search-form {
