multiple deck saving, loading, and swapping

--- a/style.css
+++ b/style.css
@@ -70,22 +70,9 @@ header {
 }
 
 #search-form-container {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.4s ease;
-  z-index: 999;
-  /* backdrop-filter not compatible with firefox */
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-}
 
+}
+  
 #search-form {
   position: relative;
   display: flex;
@@ -314,24 +301,10 @@ transform: translateY(1px);
 #test-hand-btn {
   width: 100px;
   margin: 15px auto;
-  text-align: center;
 }
 
 #test-hand-container {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  transition: opacity 0.4s ease;
-  z-index: 999;
-  /* backdrop filter not compatible with firefox */
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+
 }
 
 #test-hand {
@@ -353,6 +326,41 @@ transform: translateY(1px);
   margin: 5px;
 }
 
+#deck-list {
+  background-color: white;
+  color: black;
+  display: flex;
+  flex-flow: column;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.deck-listing-container {
+  display: flex;
+  margin: 5px 0px;
+  justify-content: space-between;
+}
+
+#deck-list .deck-listing {
+  margin: 0px;
+}
+
+.remove-deck-btn {
+  background-color: #df2e2e;
+  color: white;
+  border: 2px solid #df2e2e;
+  border-radius: 5px;
+  margin-left: 10px;
+  height: 25px;
+  width: 25px;
+  align-self: center;
+}
+
+.remove-deck-btn:hover {
+  color: #df2e2e;
+  background-color: white;
+}
+
 /***** general *****/
 
 .btn {
@@ -361,6 +369,7 @@ transform: translateY(1px);
   padding: 5px 20px;
   margin: 10px;
   font-size: 18px;
+  text-align: center;
   background-color: #3591c6;
   color: white;
   transition: transform 0.2s ease;
@@ -382,6 +391,27 @@ transform: translateY(1px);
   visibility: hidden;
   opacity: 0;
   max-height: 0px;
+}
+
+.popup-container {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.4s ease;
+  z-index: 999;
+  /* backdrop filter not compatible with firefox */
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
+.popup-child {
+  
 }
 
 /* Star Background */
