--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
 
 #card-panel {
   display: flex;
+  position: relative;
   flex-flow: column;
   flex-basis: 65vw;
   order: 0;
@@ -113,7 +114,7 @@ header {
 }
 
 #card-container {
-  flex-basis: 100%;
+  position: relative;
   overflow: auto;
   display: flex;
   flex-flow: row wrap;
@@ -121,6 +122,7 @@ header {
 }
 
 .starter-text {
+  margin-top: 50%;
   align-self: center;
   opacity: 0.7;
   font-size: 22px;
@@ -132,7 +134,7 @@ header {
   border-radius: 14px;
   flex-basis: 250px;
   transition: transform 0.2s ease;
-  max-width: max-content;
+  /* max-width: max-content; */
 }
 
 .card:hover {
@@ -142,12 +144,16 @@ header {
 
 #page-btn-container {
   display: flex;
+  /* position: absolute; */
+  bottom: 0;
+  width: 100%;
   flex-flow: row;
   justify-content: center;
+  margin: 20px 0;
 }
 
 .page-btn {
-  margin: 20px 20px 30px 20px;
+  margin: 0 20px;
   border-bottom: 1px solid transparent;
 }
 
