--- a/style.css
+++ b/style.css
@@ -229,6 +229,10 @@ transform: translateY(1px);
   max-width: 600px;
 }
 
+#add-to-deck-btn {
+  margin-bottom: 33px;
+}
+
 #deck-container {
   padding: 0px 20px;
 }
@@ -375,15 +379,18 @@ transform: translateY(1px);
 
 #info-footer {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   position: absolute;
-  bottom: 5px;
+  bottom: 0px;
+  padding-bottom: 5px;
   font-size: 12px;
   width: 100%;
+  background: rgba(0,0,0, 0.5);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.5) 74%, rgba(0,0,0,0) 100%);
 }
 
 #info-footer p {
-  margin: 5px;
+  margin: 5px 10px;
   color: white;
   filter: opacity(0.5);
   transition: filter 0.5s ease;
@@ -573,7 +580,6 @@ https://mkrtchyan.ga
     flex-basis: unset;
     border-left: none;
     border-top: 2px solid rgba(255, 255, 255, 0.1);
-    height: inherit;
   }
 
   #detail-panel h1 {
