footer styling fixes

--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@ https://mkrtchyan.ga
 
   #main-container {
     flex-flow: column;
-    /* height: auto; */
+    height: calc(100vh + 50px);
   }
 
   .starter-text {
